OCIO: Support 8 and 16 bit integer images and the qpainter canvas

BUG:325659